# ware_house

./: README.md
lvgl_disp/: sdkconfig.old
lvgl_disp/main/: lvgl_main.c
lvgl_disp_indev_ili9341_test/: sdkconfig  sdkconfig.old
lvgl_disp_indev_ili9341_test/components/lvgl/: lv_conf_template.h
lvgl_disp_indev_ili9341_test/components/lvgl/env_support/cmsis-pack/: lv_conf_cmsis.h
lvgl_disp_indev_ili9341_test/components/lvgl/src/: lv_conf_internal.h
lvgl_disp_indev_ili9341_test/components/lvgl_esp32_drivers/lvgl_tft/: ili9341.c
lvgl_disp_indev_ili9341_test/components/lvgl_porting/: CMakeLists.txt  lv_port_indev.c  lv_port_indev.h
lvgl_disp_indev_ili9341_test/main/: CMakeLists.txt  lvgl_main.c
lvgl_disp_indev_ili9341_test/main/lvgl_file/: CMakeLists.txt  filelist.txt  ui.c  ui.h
lvgl_disp_indev_ili9341_test/main/lvgl_file/screens/: ui_Screen1.c  ui_Screen3.c
