idf_component_register(SRCS "lvgl_main.c"  
                        SRCS "lvgl_file/components/ui_comp_hook.c"
                        SRCS "lvgl_file/screens/ui_Screen1.c"
                        SRCS "lvgl_file/screens/ui_Screen3.c"
                        SRCS "lvgl_file/ui.c"
                        SRCS "lvgl_file/ui_helpers.c"
                        SRCS "lvgl_file/ui_events.h"          
                    INCLUDE_DIRS "./"
                                 "././lvgl_file")